--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rolesy.io",
+  "name": "openaid-pulpomatic",
   "version": "1.0.0",
-  "description": "Recruitment process managment",
+  "description": "Pulpomatic test",
   "main": "index.js",
   "scripts": {
     "start": "node --es-module-specifier-resolution=node src/index.js",
@@ -9,20 +9,11 @@
     "lint": "eslint .  --ext .js",
     "lint-fix": "eslint --fix .  --ext .js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/k4dm3l/rolesy.io.git"
-  },
   "keywords": [
-    "recruitment",
-    "managment",
-    "rolesy.io"
+    "openaid-pulpomatic"
   ],
-  "author": "Camilo Acevedo & Brayan Duque",
+  "author": "Camilo Acevedo",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/k4dm3l/rolesy.io/issues"
-  },
   "homepage": "https://github.com/k4dm3l/rolesy.io#readme",
   "devDependencies": {
     "@babel/cli": "^7.14.8",
@@ -39,12 +30,16 @@
   },
   "dependencies": {
     "@hapi/boom": "^9.1.4",
+    "axios": "^0.21.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "jest": "^27.0.6",
+    "joi": "^17.4.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.8",
     "morgan": "^1.10.0",
     "redis": "^3.1.2",
