--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node --es-module-specifier-resolution=node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "lint": "eslint .  --ext .js",
     "lint-fix": "eslint --fix .  --ext .js"
   },
@@ -26,7 +26,13 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.1",
     "eslint-plugin-jest": "^24.4.0",
-    "nodemon": "^2.0.12"
+    "husky": "^7.0.2",
+    "lint-staged": "^11.1.2",
+    "mocha": "^9.1.1",
+    "nodemon": "^2.0.12",
+    "proxyquire": "^2.1.3",
+    "sinon": "^11.1.2",
+    "supertest": "^6.1.6"
   },
   "dependencies": {
     "@hapi/boom": "^9.1.4",
@@ -37,7 +43,6 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
-    "jest": "^27.0.6",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.8",
@@ -46,5 +51,16 @@
     "socket.io": "^4.1.3",
     "winston": "^3.3.3"
   },
-  "type": "module"
+  "type": "module",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
+  }
 }
