Added new environment variables

--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,8 @@ MONGO_URI_DEVELOP=
 REDIS_URI_PRODUCTION=
 REDIS_URI_STAGING=
 REDIS_URI_DEVELOP=
-
+REDIS_EXPIRATION_TIME_COUNTRY_LIST=
+REDIS_EXPIRATION_TIME_API_DATA=
 REDIS_PASSWORD=
 
 # Autenthication
@@ -24,3 +25,4 @@ CRYPTO_SECRET=
 
 # APIS
 OPENAID=
+COUNTRY_CODE_LIST=
