--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node --es-module-specifier-resolution=node src/index.js",
-    "test": "jest",
-    "lint": "eslint .  --ext .js",
+    "test": "jest --verbose --silent --detectOpenHandles",
+    "test:watch": "npm run test -- --watch",
+    "lint": "echo Working on",
     "lint-fix": "eslint --fix .  --ext .js"
   },
   "keywords": [
@@ -20,6 +21,8 @@
     "@babel/core": "^7.15.0",
     "@babel/node": "^7.14.9",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-private-methods": "^7.14.5",
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5",
     "@babel/preset-env": "^7.15.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
@@ -27,11 +30,9 @@
     "eslint-plugin-import": "^2.24.1",
     "eslint-plugin-jest": "^24.4.0",
     "husky": "^7.0.2",
+    "jest": "^27.1.0",
     "lint-staged": "^11.1.2",
-    "mocha": "^9.1.1",
     "nodemon": "^2.0.12",
-    "proxyquire": "^2.1.3",
-    "sinon": "^11.1.2",
     "supertest": "^6.1.6"
   },
   "dependencies": {
@@ -62,5 +63,9 @@
       "eslint --fix",
       "git add"
     ]
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "setTimeout": 90000
   }
 }
