--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node --es-module-specifier-resolution=node src/index.js",
-    "test": "jest --verbose --silent --detectOpenHandles",
+    "test": "jest --verbose --silent",
     "test:watch": "npm run test -- --watch",
     "lint": "echo Working on",
     "lint-fix": "eslint --fix .  --ext .js"
