--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "morgan": "^1.10.0",
     "redis": "^3.1.2",
     "socket.io": "^4.1.3",
+    "trackology": "^1.0.0",
     "winston": "^3.3.3"
   },
   "type": "module",
